--- a/package.json
+++ b/package.json
@@ -2,26 +2,10 @@
   "name": "api-generador-documentos",
   "version": "1.0.0",
   "type": "module",
-  "description": "API para generar documentos personalizados",
-  "main": "api/generar.js",
-  "scripts": {
-    "dev": "vercel dev",
-    "deploy": "vercel --prod"
-  },
-  "keywords": [
-    "api",
-    "canvas",
-    "documentos"
-  ],
-  "author": "httpsS2",
-  "license": "MIT",
   "dependencies": {
-    "canvas": "^2.11.2"
-  },
-  "devDependencies": {
-    "vercel": "^33.0.0"
+    "sharp": "^0.33.0"
   },
   "engines": {
-    "node": "24.x"
+    "node": "20.x"
   }
 }
