--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,9 @@
   "version": 2,
   "functions": {
     "api/**/*.js": {
-      "maxDuration": 10
+      "maxDuration": 30,
+      "memory": 3008
     }
-  }
+  },
+  "buildCommand": "npm install canvas --build-from-source"
 }
