--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,8 @@
   "functions": {
     "api/**/*.js": {
       "maxDuration": 30,
+      "memory": 3008
     }
   },
   "buildCommand": "npm install canvas --build-from-source"
 }
-
